--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-hook-form": "^5.2.0",
     "react-scripts": "3.4.1",
     "styled-components": "^5.0.1",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "uuid": "^7.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "@types/reach__router": "^1.3.1"
+    "@types/reach__router": "^1.3.1",
+    "@types/uuid": "^7.0.2"
   }
 }
