--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "react-hook-form": "^5.2.0",
+    "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
     "styled-components": "^5.0.1",
     "typescript": "~3.7.2",
     "uuid": "^7.0.3"
@@ -47,6 +49,7 @@
   },
   "devDependencies": {
     "@types/reach__router": "^1.3.1",
+    "@types/react-redux": "^7.1.7",
     "@types/uuid": "^7.0.2"
   }
 }
